# RenpySwitch

./: CMakeLists.txt  README.md  build.bash  renpy.patch  setup.bash  subprocess.pyo
.github/workflows/: main.yml
sources/: main.c
switch/: CMakeLists.txt
switch/source/: main.c
